--- a/package.json
+++ b/package.json
@@ -2,13 +2,22 @@
   "name": "markdown-snapshot-pdf",
   "displayName": "Markdown Snapshot PDF",
   "description": "Convert Markdown files to PDF with snapshot capability",
+  "license": "Unlicense",
   "version": "1.0.0",
   "publisher": "Shima",
   "engines": {
     "vscode": "^1.74.0"
   },
   "categories": [
-    "Other"
+    "Formatters"
+  ],
+  "keywords": [
+    "markdown",
+    "pdf",
+    "mermaid",
+    "converter",
+    "snapshot",
+    "export"
   ],
   "icon": "icon.png",
   "repository": {
