--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "Markdown Snapshot PDF",
   "description": "Convert Markdown files to PDF with snapshot capability",
   "license": "Unlicense",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "publisher": "Shima",
   "engines": {
     "vscode": "^1.74.0"
@@ -104,6 +104,7 @@
     "katex": "^0.16.11",
     "listr": "^0.14.3",
     "marked": "^16.2.1",
+    "pdf-lib": "^1.17.1",
     "puppeteer": "^24.17.0",
     "serve-handler": "^6.1.6"
   }
